# Practica3_Modelado

./: README.md
gwagon_description/: CMakeLists.txt  package.xml
gwagon_description/config/: config.yaml
gwagon_description/launch/: robot_controllers.launch.py  robot_description.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
gwagon_description/meshes/dae/: Cube.001.dae  Cube.021.dae  Cube.022.dae  Cube.024.dae  Cube.047.dae  Cylinder.008.dae  Cylinder.009.dae  Cylinder.010.dae  Cylinder.011.dae  Cylinder.012.dae  Cylinder.013.dae  Cylinder.018.dae  Cylinder.020.dae  Cylinder.022.dae  Cylinder.024.dae  Cylinder.026.dae  Cylinder.028.dae  Cylinder.029.dae  Plane.001.dae  Torus.000.dae  Torus.001.dae  Torus.002.dae  Torus.003.dae  Torus.004.dae  Torus.005.dae  Torus.006.dae  Torus.007.dae  Torus.008.dae  Torus.009.dae  Torus.010.dae  Torus.011.dae
gwagon_description/src/: PublisherNode.cpp
gwagon_description/urdf/: GWAGON.urdf.xacro  GWAGON_no_gripper.urdf.xacro  camera.urdf.xacro  gazebo.urdf.xacro  imu.urdf.xacro
gwagon_floor/: gwagon_floor_0.db3  metadata.yaml
gwagon_sand/: gwagon_0.db3  metadata.yaml
